JPA  connection fixed